Details
-
Bug
-
Status: Closed
-
Major
-
Resolution: Fixed
-
0.24
-
None
Description
The acl-file option does not correctly recognize windows paths of the form x:\... as absolute paths and attempts to append them to the brokers data-dir
To reproduce (on windows): qpidd --acl-file c:\path\to\policy.acl
Result: log contains
error Unable to open ACL file "<data-dir>/c:\path\to\policy.acl"
Expected result: should load file correctly.