QPID-5398: qpidd --acl-file does not work with a drive-prefixed path on windows.

On windows, acl-file was not recognizing drive-prefixed paths (e.g. c:\foo)
as absolute and was trying to interpret them relative to the brokers data-dir.

This commit fixes the problem and adds a general-purpose Path class that can be
a collection point for any other path-related portability problems that come up.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@1548279 13f79535-47bb-0310-9956-ffa450edef68